--- a/shop/templates/shop/register.html
+++ b/shop/templates/shop/register.html
@@ -1,4 +1,9 @@
-{% extends 'Shop/Layouts/Main.html' %}
+{% extends 'Main.html' %}
+
 {% block content %}
-<h1>REGISTER PAGE</h1>
-{% endblock content %}
+
+
+    <h1>Register Page</h1>
+
+
+    {% endblock %}
