--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,4 +1,9 @@
-{% extends 'Shop/Layouts/Main.html' %}
+{% extends 'Main.html' %}
+
 {% block content %}
- <h1>hell</h1>
-    {% endblock content %}
+
+
+    <h1>hello</h1>
+
+
+    {% endblock %}
