--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,9 +1,11 @@
 {% extends 'Main.html' %}
 
+{% block title %}
+Shopify | Online Shopping
+{% endblock title %}
+
 {% block content %}
-
-
     <h1>hello</h1>
+ {% endblock %}
 
-
-    {% endblock %}
+    
