--- a/shop/templates/shop/register.html
+++ b/shop/templates/shop/register.html
@@ -1,9 +1,9 @@
 {% extends 'Main.html' %}
 
+{% block title %}
+   Registration | Shopify
+{% endblock title %}
+
 {% block content %}
-
-
-    <h1>Register Page</h1>
-
-
-    {% endblock %}
+  <h1>Register Page</h1>
+{% endblock %}
