--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -5,7 +5,12 @@ Shopify | Online Shopping
 {% endblock title %}
 
 {% block content %}
-    <h1>hello</h1>
+<div class="container" style="margin-top:70px;">
+    <div class="row">
+   <div class="col-12"><h1>Hello</h1></div>
+</div>
+</div>
+    
  {% endblock %}
 
     
