--- a/shop/templates/shop/register.html
+++ b/shop/templates/shop/register.html
@@ -5,5 +5,10 @@
 {% endblock title %}
 
 {% block content %}
-  <h1>Register Page</h1>
+<div class="container" style="margin-top:70px;">
+    <div class="row">
+   <div class="col-12"><h1>Register Page</h1> </div>
+</div>
+</div>
+  
 {% endblock %}
