--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -5,6 +5,7 @@ Shopify | Online Shopping
 {% endblock title %}
 
 {% block content %}
+{% include 'inc\slider.html'%}
 <div class="container" style="margin-top:70px;">
     <div class="row">
    <div class="col-12"><h1>Hello</h1></div>
