--- a/shop/templates/Main.html
+++ b/shop/templates/Main.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,7 +11,8 @@
       {% block title %}
       {% endblock title %}
     </title>
-  </head>
+    <link rel="stylesheet" href="{% static 'css/style.css'%}">
+    </head>
   <body>
     {% include 'inc/Navbar.html' %}
     {% block content %}
