--- a/shop/templates/shop/collections.html
+++ b/shop/templates/shop/collections.html
@@ -17,7 +17,29 @@
             </p>
         </div>
       </div>
-    </section>        
+    </section>   
+    
+    <section class="bg-light py-4 my-5">
+       <div class="container">
+          <div class="row">
+            <div class="col-12">
+               <h4 class="mb-3">Categories</h4>
+               <hr style="border-color: #b8bfc2;">
+            </div>
+         {% for item in category %}
+          <div class="col-md-4 col-lg-3">
+            <div class="card my-3">
+              <img src="{{item.image.url}}" class="card-image-top" alt="Categories">
+              <div class="card-body">
+                <h5 class="card-title text-primary">{{ item.name }}</h5>
+                <p class="card-text">{{item.description}}</p>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+          </div>
+       </div>
+    </section>
 
   
 {% endblock %}
