--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,11 +1,11 @@
-{% extends 'Main.html' %}
+{% extends 'shop\Layout\Main.html' %}
 
 {% block title %}
 Shopify | Online Shopping
 {% endblock title %}
 
 {% block content %}
-{% include 'inc\slider.html'%}
+{% include 'shop\inc\slider.html'%}
 <div class="container" style="margin-top:70px;">
     <div class="row">
    <div class="col-12"><h1>Hello</h1></div>
