--- a/shop/templates/shop/collections.html
+++ b/shop/templates/shop/collections.html
@@ -21,11 +21,10 @@
           <h4 class="mb-3">Categories</h4>
           <hr style="border-color:#b8bfc2;">
         </div>
-        {% for item in catagory %}
+        {% for item in category %}
         <div class="col-md-4 col-lg-3">
           <div class="card my-3">
             <img src="{{item.image.url}}"  class="card-image-top" alt="Categories">
-            <a href="{% url 'collections' item.name %}">
             <div class="card-body">
               <h5 class="card-title text-primary">{{ item.name }}</h5>
               <p class="card-text">{{ item.description }}</p>
