--- a/shop/templates/shop/Products/index.html
+++ b/shop/templates/shop/Products/index.html
@@ -1,4 +1,4 @@
-{% extends 'shop/layouts/main.html' %}
+{% extends 'shop/Layout/Main.html' %}
 {% block title %}
 ShopKart | Online Shopping
 {% endblock title %}
@@ -16,24 +16,8 @@ ShopKart | Online Shopping
             <li class="breadcrumb-item active">{{category_name}} Collections</li>
           </ol>
         </nav>
-        {% include 'shop/inc/message.html' %}
       </div>
-      {% for item in products %}
-      <div class="col-md-4 col-lg-3">
-        <div class="card my-3">
-          <img src="{{item.product_image.url}}"  class="card-image-top" alt="Categories">
-          <a href="{% url 'product_details' category_name item.name %}">
-          <div class="card-body">
-            <h5 class="card-title text-primary">{{ item.name }}</h5>
-            <p class="card-text">
-              <span class="float-start old_price"><s>Rs.{{ item.original_price | stringformat:'d'}}</s></span>
-              <span class="float-end new_price">Rs.{{ item.selling_price | stringformat:'d' }}</span>
-            </p>
-          </div>
-        </a>
-        </div>
-      </div>
-      {% endfor %}
+      
     </div>
   </div>
 </section>
