--- a/shop/templates/shop/collections.html
+++ b/shop/templates/shop/collections.html
@@ -25,6 +25,7 @@
         <div class="col-md-4 col-lg-3">
           <div class="card my-3">
             <img src="{{item.image.url}}"  class="card-image-top" alt="Categories">
+            <a href="{%url 'collections' item.name %}">
             <div class="card-body">
               <h5 class="card-title text-primary">{{ item.name }}</h5>
               <p class="card-text">{{ item.description }}</p>
