each products name included

--- a/shop/templates/shop/Products/index.html
+++ b/shop/templates/shop/Products/index.html
@@ -15,12 +15,12 @@ ShopKart | Online Shopping
       <div class="col-md-4 col-lg-3">
         <div class="card my-3">
           <img src="{{ item.product_image.url }}"  class="card-image-top" alt="Categories">
-          <a href="{%url 'collections' item.name %}">
+          <a href="{% url 'collections' item.name %}">
           <div class="card-body">
             <h5 class="card-title text-primary">{{ item.name }}</h5>
             <p class="card-text">
-              <span class="float-start">{{ item.orginal_price }}</span> 
-              <span class="float-end">{{ item.selling_price }}</span> 
+              <span class="float-start old_price"><s>Rs.{{ item.orginal_price | stringformat:'d'}}</s></span> 
+              <span class="float-end new_price">Rs.{{ item.selling_price | stringformat:'d'}}</span> 
             </p>  
           </div>
         </a>
