Navigation Symbols added

--- a/shop/templates/shop/inc/Navbar.html
+++ b/shop/templates/shop/inc/Navbar.html
@@ -7,7 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
         <a class="nav-link" aria-current="page" href="{% url 'home' %}"><i class="fa fa-home"></i> Home</a>        
-          <a class="nav-link" href="{% url 'collections' %}"><i class="fa fa-cubes"></i> Collections</a>
+        <a class="nav-link" href="{% url 'register' %}"><i class="fa fa-user"></i> Register </a>
+        <a class="nav-link" href="{% url 'collections' %}"><i class="fa fa-cubes"></i> Collections</a>
+        <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i> Cart</a>
+
       </div>
     </div>
   </div>
