--- a/shop/templates/shop/Layout/Main.html
+++ b/shop/templates/shop/Layout/Main.html
@@ -20,6 +20,7 @@
     {% endblock content %}
     {% block scripts %}
     {% endblock scripts %}
+    {% include 'shop/inc/Footer.html' %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
