--- a/shop/templates/shop/Products/index.html
+++ b/shop/templates/shop/Products/index.html
@@ -15,8 +15,8 @@ ShopKart | Online Shopping
       <div class="col-md-4 col-lg-3">
         <div class="card my-3">
           <img src="{{ item.product_image.url }}"  class="card-image-top" alt="Categories">
-          <a href="{% url 'collections' item.name %}">
-          <div class="card-body">
+          <a href="{% url 'product_details' category_name item.name %}">
+             <div class="card-body">
             <h5 class="card-title text-primary">{{ item.name }}</h5>
             <p class="card-text">
               <span class="float-start old_price"><s>Rs.{{ item.orginal_price | stringformat:'d'}}</s></span> 
