--- a/shop/templates/shop/Products/product_details.html
+++ b/shop/templates/shop/Products/product_details.html
@@ -6,15 +6,33 @@ ShopKart | Online Shopping
 {% block content %}
 <section class="bg-light py-4 my-5" style="min-height:600px;">
   <div class="container">
-     <div class="row">
-       <div class="col-12">
-        <h4 class="mb-3">{{products}} Details</h4>
-        <hr style="border-color:#b8bfc2;">
-       </div>
-       <div class="col-4 my-3">
-        <img src="{{products.product_image.url}}" class="card-image-top" alt="products">
-       
-     </div>
+        <div class="row">
+            <div class="col-12">
+                <h4 class="mb-3">{{products}} Details</h4>
+                <hr style="border-color:#b8bfc2;">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                      <li class="breadcrumb-item"><a href="{% url 'collections' products.category.name %}">Collections</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">{{products}} </li>
+                    </ol>
+                </nav>
+            </div>
+             <div class="col-4 my-3">
+                <img src="{{products.product_image.url}}" class="card-image-top" alt="products">
+             </div>
+                <div class="col-8 my-3">
+                   <h5 class="text-success">{{products | upper}}</h5>
+                   <p>{{products.vendor}}</p>
+                   <p>{{products.description}}</p>
+                   <h6 class="my-2 text-danger" >Current Price : Rs.<s>{{products.orginal_price}}</s></h6>
+                   <h5 class="my-2 text-primary">Offer Price : Rs.{{products.selling_price}}</h5>
+                   <div class="my-3">
+                      <button class="btn btn-danger"><i class="fa fa-cart"></i>Add to Cart</button>
+                      <button class="btn btn-danger"><i class="fa fa-heart"></i></button>
+                   </div>
+            </div>  
+        </div>
   </div>
 </section>
  
