--- a/shop/templates/shop/inc/Footer.html
+++ b/shop/templates/shop/inc/Footer.html
@@ -26,10 +26,10 @@
   
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <h6 class="text-uppercase fw-bold mb-4">Make Money with Us</h6>
-            <p><a href="#!" class="text-reset">Sell on ShopKart</a></p>
+            <p><a href="#!" class="text-reset">Sell on Shopify</a></p>
             <p><a href="#!" class="text-reset">Advertise Your Products</a></p>
             <p><a href="#!" class="text-reset">Become an Affiliate</a></p>
-            <p><a href="#!" class="text-reset">Fulfilment by ShopKart</a></p>
+            <p><a href="#!" class="text-reset">Fulfilment by Shopify</a></p>
           </div>
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
