--- a/shop/templates/shop/Products/product_details.html
+++ b/shop/templates/shop/Products/product_details.html
@@ -18,8 +18,11 @@ ShopKart | Online Shopping
                     </ol>
                 </nav>
             </div>
-             <div class="col-4 my-3">
-                <img src="{{products.product_image.url}}" class="card-image-top" alt="products">
+             <div class="col-4 my-3 pic-box">
+                {% if products.trending %}
+                  <div class="hot">Hot</div>
+                {% endif %}
+                  <img src="{{products.product_image.url}}" class="card-image-top" alt="products">
              </div>
                 <div class="col-8 my-3">
                    <h5 class="text-success">{{products | upper}}</h5>
@@ -28,7 +31,11 @@ ShopKart | Online Shopping
                    <h6 class="my-2 text-danger" >Current Price : Rs.<s>{{products.orginal_price}}</s></h6>
                    <h5 class="my-2 text-primary">Offer Price : Rs.{{products.selling_price}}</h5>
                    <div class="my-3">
-                      <button class="btn btn-danger"><i class="fa fa-cart"></i>Add to Cart</button>
+                      {% if products.quantity > 0 %}
+                      <button class="btn btn-danger"><i class="fa fa-shopping-cart"></i>Add to Cart</button>
+                      {% else %}
+                      <button class="btn btn-danger"><i class="fa fa-minus"></i>Out of Stock</button>
+                      {% endif %}
                       <button class="btn btn-danger"><i class="fa fa-heart"></i></button>
                    </div>
             </div>  
