User Form created and Message Alert

--- a/shop/templates/shop/Products/product_details.html
+++ b/shop/templates/shop/Products/product_details.html
@@ -17,6 +17,7 @@ ShopKart | Online Shopping
                       <li class="breadcrumb-item active" aria-current="page">{{products}} </li>
                     </ol>
                 </nav>
+                {% include 'shop/inc/message.html' %}
             </div>
              <div class="col-4 my-3 pic-box">
                 {% if products.trending %}
