--- a/shop/templates/shop/login.html
+++ b/shop/templates/shop/login.html
@@ -1,6 +1,6 @@
 {% extends 'shop/Layout/main.html' %}
 {% block title %}
-  Registration | ShopKart
+  Registration | Shopify
 {% endblock title %}
 {% block content %}
   <div class="container" style="margin-top:70px;min-height:600px;">
@@ -8,6 +8,7 @@
       <div class="col-12">
         <h4 class="mb-3"> User Login</h4>
         <hr style="border-color:#b8bfc2;">
+        {% include 'shop/inc/message.html' %}
       </div>
     </div>
     <section class="py-4" >
