--- a/shop/templates/shop/inc/Navbar.html
+++ b/shop/templates/shop/inc/Navbar.html
@@ -16,7 +16,8 @@
         {% endif %}
           <a class="nav-link" href="{% url 'collections' %}"><i class="fa fa-cubes"></i> Collections</a>
           <a class="nav-link" href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a>
-      </div>
+          <a class="nav-link" href="{% url 'favviewpage' %}"><i class="fa fa-heart"></i> Favourite</a>
+        </div>
     </div>
   </div>
 </nav>>
