--- a/shop/templates/shop/Products/product_details.html
+++ b/shop/templates/shop/Products/product_details.html
@@ -1,6 +1,6 @@
 {% extends 'shop/Layout/Main.html' %}
 {% block title %}
-ShopKart | Online Shopping
+Shopify | Online Shopping
 {% endblock title %}
 
 {% block content %}
