--- a/shop/templates/shop/Products/product_details.html
+++ b/shop/templates/shop/Products/product_details.html
@@ -45,7 +45,7 @@ Shopify | Online Shopping
                       {% else %}
                       <button class="btn btn-danger"><i class="fa fa-minus"></i>Out of Stock</button>
                       {% endif %}
-                      <button class="btn btn-danger"><i class="fa fa-heart"></i></button>
+                      <button class="btn btn-danger" id="btnFav"><i class="fa fa-heart"></i></button>
                    </div>
             </div>  
         </div>
