--- a/shop/templates/shop/inc/Footer.html
+++ b/shop/templates/shop/inc/Footer.html
@@ -17,19 +17,19 @@
       <div class="container text-center text-md-start mt-5">
         <div class="row mt-3">
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <h6 class="text-uppercase fw-bold mb-4"><i class="fa fa-cart-plus"></i> Shopify</h6>
+            <h6 class="text-uppercase fw-bold mb-4"><i class="fa fa-cart-plus"></i> BlissBuy </h6>
             <p>
-              shopify.com is a one stop destination for your family's fashion needs.
+              BlissBuy.com is a one stop destination for your family's fashion needs.
                We give you the opportunity to give your wardrobe a makeover with the latest collections from our top brands.
             </p>
           </div>
   
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <h6 class="text-uppercase fw-bold mb-4">Make Money with Us</h6>
-            <p><a href="#!" class="text-reset">Sell on Shopify</a></p>
+            <p><a href="#!" class="text-reset">Sell on BlissBuy</a></p>
             <p><a href="#!" class="text-reset">Advertise Your Products</a></p>
             <p><a href="#!" class="text-reset">Become an Affiliate</a></p>
-            <p><a href="#!" class="text-reset">Fulfilment by Shopify</a></p>
+            <p><a href="#!" class="text-reset">Fulfilment by BlissBuy</a></p>
           </div>
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
