--- a/shop/templates/shop/collections.html
+++ b/shop/templates/shop/collections.html
@@ -9,7 +9,7 @@
         <h1 class="fw-light">Bestsellers</h1>
         <p class="lead text-muted">Our most popular products based on sales. Updated hourly.</p>
         <p>
-          <a href="{% url 'register' %}" class="btn btn-secondary my-2">Register</a>
+          <a href="{% url 'register' %}" class="btn btn-primary my-2">Register</a>
         </p>
       </div>
     </div>
@@ -30,8 +30,7 @@
                 <img src="{{ item.image.url }}" alt="Categories" class="card-img-top img-fluid" style="object-fit: cover; height: 100%;">
                 <div class="card-footer border-top border-light p-4">
                     <a href="{% url 'collections' item.name %}" class="h5">{{ item.name }}</a>
-                    <div class="mt-2">{{ item.description }}</div>
-                </div>
+                    <div class="mt-2" style="font-family: 'Poppins', 'Lato', 'Arvo', 'Raleway', sans-serif;">{{ item.description }}</div>                </div>
             </div>
             <!-- / card -->
         </div>
