Category DB added

--- a/shop/templates/shop/Products/product_details.html
+++ b/shop/templates/shop/Products/product_details.html
@@ -23,7 +23,7 @@ Shopify | Online Shopping
                 {% if products.trending %}
                   <div class="hot">Hot</div>
                 {% endif %}
-                  <img src="{{products.product_image.url}}" class="card-image-top" alt="products">
+                  <img src="{{products.product_image.url}}" class="card-img-top" alt="products">
              </div>
                 <div class="col-8 my-3">
                    <h5 class="text-success">{{products | upper}}</h5>
