--- a/shop/templates/shop/collections.html
+++ b/shop/templates/shop/collections.html
@@ -22,25 +22,22 @@
           <hr style="border-color:#b8bfc2;">
           {% include 'shop/inc/message.html' %}
         </div>
-        {% for item in category %}
-        <div class="col-md-4 col-lg-3">
-          <div class="card my-3">
-            <img src="{{item.image.url}}"  class="card-image-top" alt="Categories">
-            <a href="{%url 'collections' item.name %}">
-            <div class="card-body">
-              <h5 class="card-title text-primary">{{ item.name }}</h5>
-              <p class="card-text">{{ item.description }}</p>
-    
-            </div>
-            <!-- / card -->
         </div>
-        
-        
-        
-        
-
-
-        {% endfor %}
+        <div class="row">
+          {% for item in category %}
+          <div class="col-md-4 col-lg-3">
+            <div class="card my-3">
+              <img src="{{item.image.url}}"  class="card-image-top" alt="Categories">
+              <a href="{% url 'collections' item.name %}">
+              <div class="card-body">
+                <h5 class="card-title text-primary">{{ item.name }}</h5>
+                <p class="card-text">{{ item.description }}</p>
+              </a>
+              </div>
+            
+            </div>
+          </div>
+          {% endfor %}
 
       </div>
       </div>
